# ts_meta_srv

./: .gitignore  Cargo.toml  build.rs  config.yml
docs/: ToDo.md
examples/: rbatis_adapter_sample.rs  rbatis_sample.rs  starwift_http.rs  tidb_origin_ssl.rs
proto/: node.proto  service.proto
src/: main.rs
src/cmd/: rootcmd.rs
src/commons/: mod.rs
src/configure/: config_global.rs
src/grpcserver/: grpc_node_server.rs  mod.rs
src/httpserver/: mod.rs
src/httpserver/dao/: mod.rs
src/httpserver/handlers/: handler_etcd.rs  handler_login.rs  handler_mysql.rs  handler_redis.rs  handler_user.rs  mod.rs
src/httpserver/middleware/: authentication.rs  mod.rs
src/httpserver/module/: mod.rs  node_module.rs
src/httpserver/routers/: root.rs
src/interact/: cli.rs
src/resources/: etcd_resources.rs  init_resources.rs  mod.rs
src/service/: mod.rs  service_node.rs
